Membuat layout untuk list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Galeri Hewan</string>
+    <string name="angsa">Angsa</string>
+    <string name="angsa_latin">Cygnus olor</string>
 </resources>
