--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Galeri Hewan</string>
     <string name="angsa">Angsa</string>
     <string name="angsa_latin">Cygnus olor</string>
+    <string name="koneksi_error">Koneksi error</string>
 </resources>
